[gd_scene load_steps=19 format=2]

[ext_resource path="res://Effects/DayNightCycle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Prefabs/Computer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/UI.gd" type="Script" id=3]
[ext_resource path="res://Prefabs/TV.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/GUI/SimpleBox.tres" type="Theme" id=5]
[ext_resource path="res://Assets/GUI/Montserrat-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/GUI/SimpleBoxDark.tres" type="Theme" id=7]
[ext_resource path="res://Scripts/Dialog.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=33]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=32]
size = 47
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.854902, 0.0980392, 0.0980392, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=34]
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.301961, 0.65098, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0.101961, 0.847059, 0.215686, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id=37]
resource_name = "Bob"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 752, 120 ), Vector2( 752, 128 ), Vector2( 752, 120 ) ]
}

[sub_resource type="Animation" id=38]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 752, 120 ) ]
}

[sub_resource type="Animation" id=35]
resource_name = "Popup"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 552 ), Vector2( 8, 488 ), Vector2( 8, 488 ), Vector2( 8, 552 ) ]
}

[sub_resource type="Animation" id=36]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 552 ) ]
}

[node name="UI" type="Control"]
anchor_left = 0.017
anchor_top = 0.015
anchor_right = 0.983
anchor_bottom = 0.963
margin_left = 463.68
margin_top = 261.9
margin_right = -463.68
margin_bottom = -250.02
theme = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DayNightCycle" parent="." instance=ExtResource( 1 )]
color = Color( 0.768627, 0.698039, 0.560784, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ClockPanel" type="Panel" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.913725 )
margin_left = 8.0
margin_top = 8.0
margin_right = 104.0
margin_bottom = 48.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clock" type="Label" parent="CanvasLayer/ClockPanel"]
margin_right = 96.0
margin_bottom = 38.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 33 )
text = "20:30"
align = 1
valign = 1

[node name="EventPanel" type="Panel" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0.913725 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -360.0
margin_top = 128.0
margin_right = 280.0
margin_bottom = 232.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventLabel" type="Label" parent="CanvasLayer/EventPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -54.0
margin_right = 320.0
margin_bottom = 4.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 32 )
text = "Power Outage"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubEventLabel" type="Label" parent="CanvasLayer/EventPanel/EventLabel"]
margin_top = 80.0
margin_right = 640.0
margin_bottom = 104.0
text = "Alternative source of power required"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="CanvasLayer/EventPanel"]

[node name="Timer" type="Timer" parent="CanvasLayer/EventPanel"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Computer" parent="CanvasLayer" instance=ExtResource( 2 )]
visible = false

[node name="TV" parent="CanvasLayer" instance=ExtResource( 4 )]
visible = false

[node name="Danger" type="ProgressBar" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.913725 )
margin_left = 816.0
margin_top = 16.0
margin_right = 946.0
margin_bottom = 44.0
theme = ExtResource( 5 )
custom_styles/fg = SubResource( 31 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DangerTimer" type="Timer" parent="CanvasLayer/Danger"]
wait_time = 0.5
autostart = true

[node name="Label" type="Label" parent="CanvasLayer/Danger"]
margin_right = 136.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 34 )
text = "Danger"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stress" type="ProgressBar" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.913725 )
margin_left = 816.0
margin_top = 64.0
margin_right = 946.0
margin_bottom = 92.0
theme = ExtResource( 5 )
custom_styles/fg = SubResource( 29 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StressTimer" type="Timer" parent="CanvasLayer/Stress"]
wait_time = 0.5
autostart = true

[node name="Label" type="Label" parent="CanvasLayer/Stress"]
margin_right = 136.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 34 )
text = "Stress"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hunger" type="ProgressBar" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.913725 )
margin_left = 816.0
margin_top = 112.0
margin_right = 946.0
margin_bottom = 140.0
theme = ExtResource( 5 )
custom_styles/fg = SubResource( 30 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HungerTimer" type="Timer" parent="CanvasLayer/Hunger"]
wait_time = 0.5
autostart = true

[node name="Label" type="Label" parent="CanvasLayer/Hunger"]
margin_right = 136.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 34 )
text = "Hunger"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.913725 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -184.0
margin_top = -300.0
margin_right = -8.0
margin_bottom = -12.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="VBoxContainer" parent="CanvasLayer/Panel"]
margin_left = 8.0
margin_top = 40.0
margin_right = 168.0
margin_bottom = 280.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Panel/Inventory"]
margin_right = 160.0
margin_bottom = 21.0
theme = ExtResource( 5 )

[node name="Label2" type="Label" parent="CanvasLayer/Panel/Inventory"]
margin_top = 26.0
margin_right = 160.0
margin_bottom = 47.0
theme = ExtResource( 5 )

[node name="Label3" type="Label" parent="CanvasLayer/Panel/Inventory"]
margin_top = 52.0
margin_right = 160.0
margin_bottom = 73.0
theme = ExtResource( 5 )

[node name="Label4" type="Label" parent="CanvasLayer/Panel/Inventory"]
margin_top = 78.0
margin_right = 160.0
margin_bottom = 99.0
theme = ExtResource( 5 )

[node name="Label5" type="Label" parent="CanvasLayer/Panel/Inventory"]
margin_top = 104.0
margin_right = 160.0
margin_bottom = 125.0
theme = ExtResource( 5 )

[node name="Label6" type="Label" parent="CanvasLayer/Panel/Inventory"]
margin_top = 130.0
margin_right = 160.0
margin_bottom = 151.0
theme = ExtResource( 5 )

[node name="Label7" type="Label" parent="CanvasLayer/Panel/Inventory"]
margin_top = 156.0
margin_right = 160.0
margin_bottom = 177.0
theme = ExtResource( 5 )

[node name="Label8" type="Label" parent="CanvasLayer/Panel/Inventory"]
margin_top = 182.0
margin_right = 160.0
margin_bottom = 203.0
theme = ExtResource( 5 )

[node name="Label9" type="Label" parent="CanvasLayer/Panel/Inventory"]
margin_top = 208.0
margin_right = 160.0
margin_bottom = 229.0
theme = ExtResource( 5 )

[node name="InventoryText" type="Label" parent="CanvasLayer/Panel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 168.0
margin_bottom = 29.0
text = "Inventory"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog" type="Panel" parent="CanvasLayer"]
visible = false
margin_left = 16.0
margin_top = 376.0
margin_right = 792.0
margin_bottom = 520.0
theme = ExtResource( 7 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
dialogPath = "res://Assets/Dialogs/Dialog0.json"

[node name="Text" type="RichTextLabel" parent="CanvasLayer/Dialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 768.0
margin_bottom = 136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Indicator" type="Polygon2D" parent="CanvasLayer/Dialog"]
position = Vector2( 752, 120 )
color = Color( 0.207843, 0.0509804, 0.556863, 1 )
polygon = PoolVector2Array( -8, -8, 8, -8, 0, 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Dialog/Indicator"]
anims/Bob = SubResource( 37 )
anims/RESET = SubResource( 38 )

[node name="Timer" type="Timer" parent="CanvasLayer/Dialog"]

[node name="Popup" type="Panel" parent="CanvasLayer"]
margin_left = 8.0
margin_top = 552.0
margin_right = 320.0
margin_bottom = 592.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Popup"]
margin_left = 8.0
margin_top = 8.0
margin_right = 304.0
margin_bottom = 32.0
text = "Bathtub filled up (1/13)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Popup"]
anims/Popup = SubResource( 35 )
anims/RESET = SubResource( 36 )

[connection signal="timeout" from="CanvasLayer/EventPanel/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CanvasLayer/Danger/DangerTimer" to="." method="_on_DangerTimer_timeout"]
[connection signal="timeout" from="CanvasLayer/Stress/StressTimer" to="." method="_on_StressTimer_timeout"]
[connection signal="timeout" from="CanvasLayer/Hunger/HungerTimer" to="." method="_on_HungerTimer_timeout"]
